<resources>
    <string name="app_name">SmartGuide</string>
    <string name="Welcome_to_the_program_guide_smart_to_serve_pilgrims">اهلا بكم فى برنامج المرشد الذكى لخدمة الحجاج</string>
    <string name="UserName">اسم المستخدم</string>
    <string name="Password">كلمة المرور</string>
    <string name="Register">تسجيل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Follow_the_flights">متابعه الرحلات</string>
    <string name="Search_bus_number">Search bus number</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Place_of_receipt_of_pilgrims">مكان استلام الحجاج</string>
    <string name="Download_place_of_pilgrims">مكان تنزيل الحجاج</string>
    <string name="Create_atrip">انشاء رحله</string>
    <string name="Old_trip">رحلة قديمة</string>
    <string name="Email">البريد الالكترونى</string>
    <string name="GuideName">اسم المرشد</string>
    <string name="NewTrip">رحله جديده</string>
    <string name="BusNumber">رقم الحافلة</string>
    <string name="DriverName">اسم السائق</string>
    <string name="MemberName">اسم عضو النقل والتصعيد</string>
    <string name="trip_arabic_name">اسم الرحله عربى</string>
    <string name="trip_Latin_name">اسم الرحله لاتينى</string>
    <string name="start_date_of_the_trip">موعد بدء الرحله</string>
    <string name="end_date_of_the_trip">موعد انتهاء الرحله</string>
    <string name="pleaseEnterTripArabicName">من فضلك ,ادخل اسم الرحله عربى</string>
    <string name="pleaseEnterTripLatinName">من فضلك ,ادخل اسم الرحله لاتينى</string>
    <string name="pleaseEnterReceiptPlace_Of_Pilgrims">من فضلك ,ادخل مكان استلام الحجاج</string>
    <string name="pleaseEnterDownloadPlace_of_pilgrims">من فضلك ,ادخل مكان تنزيل الحجاج</string>
    <string name="pleaseEntertripStartDate">من فضلك ,ادخل موعد بدء الرحله</string>
    <string name="pleaseEnterTripEndDate">من فضلك ,ادخل موعد انتهاء الرحله</string>
    <string name="TripsNotifications">اشعارات الرحلات</string>
    <string name="contactWithGuide">تواصل مع المرشد</string>
    <string name="Accept">قبول</string>
    <string name="Refuse">رفض</string>
    <string name="MyGuides">المرشدين الخاصين بي</string>
    <string name="PhoneCallWithGuide">مكالمه تليفونيه مع المرشد</string>
    <string name="give_a_command">إعطاء امر التنزيل</string>
    <string name="ImmediateTrip">رحله فوريه</string>
    <string name="Path">المسار</string>
    <string name="StatusTrip">حاله الرحله</string>
    <string name="SortBy">ترتيب بحسب</string>
    <string name="request_suspension">تعليق الطلب</string>
    <string name="start_trip">بدء الرحلة</string>
    <string name="ViewPath">عرض المسار</string>
    <string name="SortByDot">ترتيب بحسب....</string>
    <string name="status">الحاله</string>
    <string name="date">التاريخ</string>
    <string name="SortByStatus">ترتيب بحسب الحاله</string>
    <string name="mosnada">مسنده</string>
    <string name="kayd_tanfez">قيد التنفيذ</string>
    <string name="moalaq">معلق</string>
    <string name="malghia">ملغيه</string>
    <string name="mokfl_nhaey">مقفل نهائي</string>
    <string name="mokfl_gozey">مقفل جزئي</string>
    <string name="mogdwla">مجدوله</string>
    <string name="SortByDate">ترتيب بحسب التاريخ</string>
    <string name="oldest">الاقدم</string>
    <string name="recent">الاحدث</string>
    <string name="Follow_flight">متابعة الرحلة</string>
    <string name="edit_trip">تعديل الرحله</string>
    <string name="save">حفظ</string>
    <string name="Send">ارسال</string>
    <string name="PauseTrip">تعليق الطلب</string>
    <string name="finish_trip">إلغاء الرحلة</string>
    <string name="title_activity_navigation_guide">NavigationGuideActivity</string>
    <string name="title_activity_navigation_driver">NavigationDriverActivity</string>
    <string name="title_activity_navigation_member">NavigationMemberActivity</string>
    <string name="nextTrip">الرحله القادمه</string>
    <string name="delivering_done">تم استلام الحجاج بنجاح</string>
    <string name="checkNetworkConnection">تأكد من اتصالك بالانترنت!</string>
</resources>
