<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".fragment.SortByStatusFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/sort_by_status_status_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="#154677">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- <ImageView
                 android:id="@+id/home_image_favrite_heart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/favorite_heart_button"
                 />-->
            <!--<ImageView
                android:id="@+id/sort_by_status_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/notifications_button"
                />-->
            <ImageView
                android:id="@+id/sort_by_status_icon_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/group153"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Follow_the_flights"
                android:layout_toLeftOf="@+id/sort_by_status_icon_plus"
                android:layout_marginRight="@dimen/_73sdp"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/sort_by_status_relative_sort_by"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginTop="@dimen/_40sdp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/SortByStatus"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_results_button"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_sort_by"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_sort_by"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_mosnda"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/view_sort_by"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_mosnada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/mosnada"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_mosnda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_mosnda"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_mosnda"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_kayd_tnfez"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/view_mosnda"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_kayd_tnfez"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/kayd_tanfez"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_kayd_tnfez"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_kayd_tnfez"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_moalaq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/view_kayd_tnfez"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_moalaq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/moalaq"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_moalaq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_moalaq"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_moalaq"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_malghia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@+id/view_moalaq"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_malghia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/malghia"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_malghia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_malghia"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_malghia"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_mokfl_nhaey"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/view_malghia"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_mokfl_nhaey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/mokfl_nhaey"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_mokfl_nhaey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_mokfl_nahey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_mokfl_nhaey"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_mokfl_gozey"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/view_mokfl_nahey"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_mokfl_gozey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/mokfl_gozey"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_mokfl_gozey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:id="@+id/view_mokfl_gozey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_status_relative_mokfl_gozey"
        />

    <RelativeLayout
        android:id="@+id/sort_by_status_relative_mogdwla"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/view_mokfl_gozey"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_status_text_mogdwla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/mogdwla"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_status_icon_mogdwla"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>