<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".fragment.SortByFragment">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/sort_by_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_42sdp"
        android:background="#154677">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- <ImageView
                 android:id="@+id/home_image_favrite_heart"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/favorite_heart_button"
                 />-->
           <!-- <ImageView
                android:id="@+id/sort_by_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/notifications_button"
                />-->
            <ImageView
                android:id="@+id/sort_by_icon_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/_11sdp"
                android:src="@drawable/group153"
                />
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Follow_the_flights"
                android:layout_toLeftOf="@+id/sort_by_icon_plus"
                android:layout_marginRight="@dimen/_73sdp"
                android:textColor="#fff"
                android:textSize="@dimen/_14sdp"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/sort_by_relative_sort_by"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="@dimen/_40sdp"
       >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_text_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/SortByDot"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_icon_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/filter_results_button"
               android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_relative_sort_by"
        />

    <RelativeLayout
        android:id="@+id/sort_by_relative_status"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/sort_by_relative_sort_by"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_text_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/status"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_icon_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="#eae8e8"
        android:layout_marginTop="@dimen/_1sdp"
        android:layout_below="@+id/sort_by_relative_status"
        />

    <RelativeLayout
        android:id="@+id/sort_by_relative_date"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/sort_by_relative_status"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/_11sdp"
            android:layout_marginRight="@dimen/_11sdp"
            >

            <TextView
                android:id="@+id/sort_by_text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:textColor="#154677"
                android:textSize="@dimen/_13sdp"
                android:text="@string/date"
                android:textStyle="bold"
                android:layout_alignParentRight="true"

                />
            <ImageView
                android:id="@+id/sort_by_icon_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/chevron"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="@dimen/_7sdp"/>

        </RelativeLayout>
    </RelativeLayout>



</RelativeLayout>